test/domains/vass/assoc-idxtype-error-2.good
assoc-idxtype-error-2.chpl:2: error: unresolved access of '[DefaultAssociativeDom([domain(1,int(64),one)] range(int(64),both,one),false)] int(64)' by '[1]'
